--- a/Assessment2/Assessment2/Assessment2.vcxproj.filters
+++ b/Assessment2/Assessment2/Assessment2.vcxproj.filters
@@ -16,6 +16,15 @@
     <Filter Include="Resource Files\textures">
       <UniqueIdentifier>{c863e01d-03f3-41bf-96ea-461a3620f413}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\objects">
+      <UniqueIdentifier>{f2e71880-3635-42b1-8628-a9a8b255b868}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\objects\bus">
+      <UniqueIdentifier>{65e747cb-a6e7-4b74-af3c-b94b0ff103b2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\objects\earth">
+      <UniqueIdentifier>{4c20c3ba-6e15-4a66-9646-ba6cd8f6d29d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Assessment2.cpp">
@@ -59,6 +68,9 @@
     <ClInclude Include="..\..\include\tiny_obj_loader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="pbr.frag">
@@ -84,26 +96,40 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="textures\ocean-rock_albedo.png">
+    <Image Include="..\textures\ocean-rock_albedo.png">
       <Filter>Resource Files\textures</Filter>
     </Image>
-    <Image Include="textures\ocean-rock_ao.png">
+    <Image Include="..\textures\ocean-rock_ao.png">
       <Filter>Resource Files\textures</Filter>
     </Image>
-    <Image Include="textures\ocean-rock_height.png">
+    <Image Include="..\textures\ocean-rock_height.png">
       <Filter>Resource Files\textures</Filter>
     </Image>
-    <Image Include="textures\ocean-rock_metallic.png">
+    <Image Include="..\textures\ocean-rock_metallic.png">
       <Filter>Resource Files\textures</Filter>
     </Image>
-    <Image Include="textures\ocean-rock_normal-dx.png">
+    <Image Include="..\textures\ocean-rock_normal-dx.png">
       <Filter>Resource Files\textures</Filter>
     </Image>
-    <Image Include="textures\ocean-rock_preview.jpg">
+    <Image Include="..\textures\ocean-rock_preview.jpg">
       <Filter>Resource Files\textures</Filter>
     </Image>
-    <Image Include="textures\ocean-rock_roughness.png">
+    <Image Include="..\textures\ocean-rock_roughness.png">
       <Filter>Resource Files\textures</Filter>
     </Image>
+    <Image Include="..\objects\generic-town-bus\df.png">
+      <Filter>Resource Files\objects\bus</Filter>
+    </Image>
+    <Image Include="..\..\..\COMP3011 - Graphics\self study 9\self study 9\objs\earth\map.jpg">
+      <Filter>Resource Files\objects\earth</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\objects\generic-town-bus\bus.obj">
+      <Filter>Resource Files\objects\bus</Filter>
+    </Object>
+    <Object Include="..\objects\earth\earth.obj">
+      <Filter>Resource Files\objects\earth</Filter>
+    </Object>
   </ItemGroup>
 </Project>
