--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ x86/
 [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
-# [Oo]bj/ allow .obj files
+[Oo]bj/
 [Ll]og/
 [Ll]ogs/
 
@@ -74,7 +74,7 @@ StyleCopReport.xml
 *_h.h
 *.ilk
 *.meta
-*.obj
+#*.obj allow .obj files
 *.iobj
 *.pch
 *.pdb
