--- a/Assessment2/Assessment2/Assessment2.vcxproj.filters
+++ b/Assessment2/Assessment2/Assessment2.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="include\collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\animation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="pbr.frag">
