--- a/Assessment2/Assessment2/Assessment2.vcxproj
+++ b/Assessment2/Assessment2/Assessment2.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="..\..\include\tiny_obj_loader.h" />
     <ClInclude Include="include\collision.h" />
     <ClInclude Include="include\model.h" />
+    <ClInclude Include="torus.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="pbr.frag" />
