--- a/Assessment2/Assessment2/Assessment2.vcxproj
+++ b/Assessment2/Assessment2/Assessment2.vcxproj
@@ -139,18 +139,18 @@
     <ClInclude Include="..\..\include\animation.h" />
     <ClInclude Include="..\..\include\bitmap.h" />
     <ClInclude Include="..\..\include\camera.h" />
+    <ClInclude Include="..\..\include\collision.h" />
     <ClInclude Include="..\..\include\error.h" />
     <ClInclude Include="..\..\include\file.h" />
     <ClInclude Include="..\..\include\light.h" />
+    <ClInclude Include="..\..\include\model.h" />
     <ClInclude Include="..\..\include\object_parser.h" />
     <ClInclude Include="..\..\include\shader.h" />
     <ClInclude Include="..\..\include\shadow.h" />
     <ClInclude Include="..\..\include\stb_image.h" />
     <ClInclude Include="..\..\include\texture.h" />
     <ClInclude Include="..\..\include\tiny_obj_loader.h" />
-    <ClInclude Include="include\collision.h" />
-    <ClInclude Include="include\model.h" />
-    <ClInclude Include="torus.h" />
+    <ClInclude Include="..\..\include\torus.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="pbr.frag" />
