--- a/Assessment2/Assessment2/Assessment2.vcxproj.filters
+++ b/Assessment2/Assessment2/Assessment2.vcxproj.filters
@@ -56,16 +56,16 @@
     <ClInclude Include="..\..\include\tiny_obj_loader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\model.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\collision.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="torus.h">
+    <ClInclude Include="..\..\include\collision.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\torus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
